Add Phase 1 Kalman lab with working CV KF example

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,16 @@
             "env": {
                 "PYTHONPATH": "${workspaceFolder}/src"
             }
+        },
+        {
+            "name": "Run minimal CV KF",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/examples/01_minimal_cv_kf.py",
+            "console": "integratedTerminal",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}/src"
+            }
         }
     ]
 }
